--- a/programs/cpamm/Cargo.toml
+++ b/programs/cpamm/Cargo.toml
@@ -17,5 +17,7 @@ no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
 
 [dependencies]
-anchor-lang = "0.30.1"
+anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
 anchor-spl = "0.30.1"
+fixed = "1.27.0"
+fixed-sqrt = "0.2.5"
